# wabbit-dev

./: .entropyignore  .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTOR_PRIVACY.md  README.md  TODO.md  dev.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
dev/: ai.py  banner.py  base.py  build_order.py  caching.py  config.py  download.py  file_properties.py  git_changes.py  git_contributors.py  intrangeset.py  io.py  jitpack.py  maven.py  messages.py  test_caching.py  test_intrangeset.py  test_maven.py  test_workflow.py  versions.py
dev/checks/: base.py  code_formatting.py  code_linting.py  code_stale.py  dependencies.py  dependency_updates.py  file_duplicates.py  file_headers.py  file_modes.py  file_paths.py  identifier_uniqueness.py  large_files.py  project_files.py  repo_contributors.py  secrets.py  text_quality.py
dev/review/: check.py  check_log_ids.py  choose-jvm.py  clean.py  clean1.py  entro.py  git0.py  researcher.py  status.py
dev/tasks/: check.py  check_config.py  choose-jvm.py  clean.py  commit.py  dep_graph.py  dep_updates.py  duplicates.py  jitpack.py  llmcopy.py  publish.py  push.py  researcher.py  setup.py  status.py
