[tool.poetry]
name = "wabbit-dev"
version = "0.1.0"
description = "Development utilities for the Wabbit project"
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = ">=4.12.3,<5.0.0"
aiohttp = ">=3.11.11,<4.0.0"
aiodns = ">=3.2.0,<4.0.0"
requests = ">=2.32.3,<3.0.0"
crossrefapi = ">=1.6.0,<2.0.0"
arxiv = ">=2.1.3,<3.0.0"
semanticscholar = ">=0.9.0,<2.0.0"
jinja2 = ">=3.1.5,<4.0.0"
pathspec = ">=0.12.1,<2.0.0"
pygithub = ">=2.5.0,<3.0.0"
gitpython = ">=3.1.44,<4.0.0"
graphviz = ">=0.20.3,<1.0.0"
anthropic = ">=0.44.0,<2.0.0"
openai = ">=1.60.0,<2.0.0"
fastembed = "*"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
